--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-#target {
-    white-space:pre;
-    display:inline-block;
-  }
-  #target span {
-    position:relative;
-    display:inline-block;
-    transform-origin:left;
-  }
+html{
+  background-color: black;
+}
+
